--- a/examples/k8s/clamav-rest-api-configmap.yml
+++ b/examples/k8s/clamav-rest-api-configmap.yml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: cra-configmap
+  name: clamav-rest-api-configmap
+  namespace: clamav
 data:
   # property-like keys; each key maps to a simple value
   node-env: 'production'
